# cvdp

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  dp.h  dputility.cpp  dputility.h  log.h  yolov8.cpp  yolov8.h
docx/: 开发文档（大概）.docx
dp/: CMakeLists.txt  dp.h  dputility.cpp  dputility.h  yolov8.cpp  yolov8.h
log/: CMakeLists.txt  log.cpp
